# filefinder

./: .gitignore  .readthedocs.yaml  README.md  changelog.md  pyproject.toml  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
ci/: pre-commit.sh  requirements-dev.yml
ci/requirements/: requirements-dev.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  examples.rst  filtering.rst  find_files.rst  fix_groups.rst  fix_matchers.rst  index.rst  pattern.rst  quickstart.rst  retrieve_values.rst  usage.rst
docs/source/_references/: filefinder.finder.rst  filefinder.format.rst  filefinder.library.rst  filefinder.matcher.rst  filefinder.rst
docs/source/_templates/autosummary/: base.rst  class.rst  module.rst
src/filefinder/: __init__.py  filters.py  finder.py  format.py  group.py  library.py  matcher.py  matches.py  util.py
tests/: conftest.py
tests/unit/: test_filters.py  test_finder.py  test_format.py  test_group.py  test_library.py  test_matches.py  util.py
